// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`paridad del dibujo sin efectos nuevos > curvo 1`] = `
{
  "h": 106.13380707394703,
  "log": [
    "set font=bold 40px Arial",
    "measureText("H")",
    "set font=bold 40px Arial",
    "measureText("o")",
    "set font=bold 40px Arial",
    "measureText("l")",
    "set font=bold 40px Arial",
    "measureText("a")",
    "set font=bold 40px Arial",
    "measureText(" ")",
    "set font=bold 40px Arial",
    "measureText("m")",
    "set font=bold 40px Arial",
    "measureText("u")",
    "set font=bold 40px Arial",
    "measureText("n")",
    "set font=bold 40px Arial",
    "measureText("d")",
    "set font=bold 40px Arial",
    "measureText("o")",
    "set textAlign=center",
    "set textBaseline=middle",
    "set font=bold 40px Arial",
    "measureText("H")",
    "set font=bold 40px Arial",
    "measureText("o")",
    "set font=bold 40px Arial",
    "measureText("l")",
    "set font=bold 40px Arial",
    "measureText("a")",
    "set font=bold 40px Arial",
    "measureText(" ")",
    "set font=bold 40px Arial",
    "measureText("m")",
    "set font=bold 40px Arial",
    "measureText("u")",
    "set font=bold 40px Arial",
    "measureText("n")",
    "set font=bold 40px Arial",
    "measureText("d")",
    "set font=bold 40px Arial",
    "measureText("o")",
    "save()",
    "translate(106.834,128.268)",
    "rotate(-0.942)",
    "translate(0.000,-100.268)",
    "set font=bold 40px Arial",
    "set fillStyle=#112233",
    "set strokeStyle=#ff0000",
    "set lineWidth=2.000",
    "set lineJoin=round",
    "strokeText(H,0.000,0.000)",
    "fillText(H,0.000,0.000)",
    "restore()",
    "save()",
    "translate(106.834,128.268)",
    "rotate(-0.733)",
    "translate(0.000,-100.268)",
    "set font=bold 40px Arial",
    "set fillStyle=#112233",
    "set strokeStyle=#ff0000",
    "set lineWidth=2.000",
    "set lineJoin=round",
    "strokeText(o,0.000,0.000)",
    "fillText(o,0.000,0.000)",
    "restore()",
    "save()",
    "translate(106.834,128.268)",
    "rotate(-0.524)",
    "translate(0.000,-100.268)",
    "set font=bold 40px Arial",
    "set fillStyle=#112233",
    "set strokeStyle=#ff0000",
    "set lineWidth=2.000",
    "set lineJoin=round",
    "strokeText(l,0.000,0.000)",
    "fillText(l,0.000,0.000)",
    "restore()",
    "save()",
    "translate(106.834,128.268)",
    "rotate(-0.314)",
    "translate(0.000,-100.268)",
    "set font=bold 40px Arial",
    "set fillStyle=#112233",
    "set strokeStyle=#ff0000",
    "set lineWidth=2.000",
    "set lineJoin=round",
    "strokeText(a,0.000,0.000)",
    "fillText(a,0.000,0.000)",
    "restore()",
    "save()",
    "translate(106.834,128.268)",
    "rotate(-0.105)",
    "translate(0.000,-100.268)",
    "set font=bold 40px Arial",
    "set fillStyle=#112233",
    "set strokeStyle=#ff0000",
    "set lineWidth=2.000",
    "set lineJoin=round",
    "strokeText( ,0.000,0.000)",
    "fillText( ,0.000,0.000)",
    "restore()",
    "save()",
    "translate(106.834,128.268)",
    "rotate(0.105)",
    "translate(0.000,-100.268)",
    "set font=bold 40px Arial",
    "set fillStyle=#112233",
    "set strokeStyle=#ff0000",
    "set lineWidth=2.000",
    "set lineJoin=round",
    "strokeText(m,0.000,0.000)",
    "fillText(m,0.000,0.000)",
    "restore()",
    "save()",
    "translate(106.834,128.268)",
    "rotate(0.314)",
    "translate(0.000,-100.268)",
    "set font=bold 40px Arial",
    "set fillStyle=#112233",
    "set strokeStyle=#ff0000",
    "set lineWidth=2.000",
    "set lineJoin=round",
    "strokeText(u,0.000,0.000)",
    "fillText(u,0.000,0.000)",
    "restore()",
    "save()",
    "translate(106.834,128.268)",
    "rotate(0.524)",
    "translate(0.000,-100.268)",
    "set font=bold 40px Arial",
    "set fillStyle=#112233",
    "set strokeStyle=#ff0000",
    "set lineWidth=2.000",
    "set lineJoin=round",
    "strokeText(n,0.000,0.000)",
    "fillText(n,0.000,0.000)",
    "restore()",
    "save()",
    "translate(106.834,128.268)",
    "rotate(0.733)",
    "translate(0.000,-100.268)",
    "set font=bold 40px Arial",
    "set fillStyle=#112233",
    "set strokeStyle=#ff0000",
    "set lineWidth=2.000",
    "set lineJoin=round",
    "strokeText(d,0.000,0.000)",
    "fillText(d,0.000,0.000)",
    "restore()",
    "save()",
    "translate(106.834,128.268)",
    "rotate(0.942)",
    "translate(0.000,-100.268)",
    "set font=bold 40px Arial",
    "set fillStyle=#112233",
    "set strokeStyle=#ff0000",
    "set lineWidth=2.000",
    "set lineJoin=round",
    "strokeText(o,0.000,0.000)",
    "fillText(o,0.000,0.000)",
    "restore()",
  ],
  "w": 213.66860205786452,
}
`;

exports[`paridad del dibujo sin efectos nuevos > recto: caja 1`] = `
{
  "h": 150,
  "log": [
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola")",
    "set font=bold 40px Arial",
    "measureText("Hola")",
    "set font=bold 40px Arial",
    "measureText(" ")",
    "set font=bold 40px Arial",
    "measureText("mundo")",
    "set font=bold 40px Arial",
    "measureText("Hola")",
    "set font=bold 40px Arial",
    "measureText("mundo")",
    "set font=bold 40px Arial",
    "measureText("mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda")",
    "set font=bold 40px Arial",
    "measureText("Segunda")",
    "set font=bold 40px Arial",
    "measureText(" ")",
    "set font=bold 40px Arial",
    "measureText("línea")",
    "set font=bold 40px Arial",
    "measureText("Segunda")",
    "set font=bold 40px Arial",
    "measureText("línea")",
    "set font=bold 40px Arial",
    "measureText("línea")",
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola")",
    "set font=bold 40px Arial",
    "measureText("Hola")",
    "set font=bold 40px Arial",
    "measureText(" ")",
    "set font=bold 40px Arial",
    "measureText("mundo")",
    "set font=bold 40px Arial",
    "measureText("Hola")",
    "set font=bold 40px Arial",
    "measureText("mundo")",
    "set font=bold 40px Arial",
    "measureText("mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda")",
    "set font=bold 40px Arial",
    "measureText("Segunda")",
    "set font=bold 40px Arial",
    "measureText(" ")",
    "set font=bold 40px Arial",
    "measureText("línea")",
    "set font=bold 40px Arial",
    "measureText("Segunda")",
    "set font=bold 40px Arial",
    "measureText("línea")",
    "set font=bold 40px Arial",
    "measureText("línea")",
    "set textBaseline=top",
    "set textAlign=left",
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Hola,10.000,0.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(mundo,0.000,40.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Segunda,-20.000,80.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(línea,100.000,0.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
  ],
  "w": 200,
}
`;

exports[`paridad del dibujo sin efectos nuevos > recto: contorno_sombra 1`] = `
{
  "h": 80,
  "log": [
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set textBaseline=top",
    "set textAlign=left",
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "set shadowColor=#000",
    "set shadowBlur=4.000",
    "set shadowOffsetX=2.000",
    "set shadowOffsetY=2.000",
    "set strokeStyle=#ff0000",
    "set lineWidth=3.000",
    "set lineJoin=round",
    "strokeText(Hola mundo,30.000,0.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Hola mundo,30.000,0.000)",
    "set font=bold 40px Arial",
    "set shadowColor=#000",
    "set shadowBlur=4.000",
    "set shadowOffsetX=2.000",
    "set shadowOffsetY=2.000",
    "set strokeStyle=#ff0000",
    "set lineWidth=3.000",
    "set lineJoin=round",
    "strokeText(Segunda línea,0.000,40.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Segunda línea,0.000,40.000)",
  ],
  "w": 260,
}
`;

exports[`paridad del dibujo sin efectos nuevos > recto: degradado 1`] = `
{
  "h": 80,
  "log": [
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set textBaseline=top",
    "set textAlign=left",
    "set letterSpacing=1px",
    "createLinearGradient(130.00,-0.00,130.00,80.00)",
    "stop(0,#fff)",
    "stop(1,#000)",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=[object Object]",
    "fillText(Hola mundo,30.000,0.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=[object Object]",
    "fillText(Segunda línea,0.000,40.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
  ],
  "w": 260,
}
`;

exports[`paridad del dibujo sin efectos nuevos > recto: eco 1`] = `
{
  "h": 80,
  "log": [
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set textBaseline=top",
    "set textAlign=left",
    "set letterSpacing=1px",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#00ff00",
    "save()",
    "set globalAlpha=0.090",
    "set font=bold 40px Arial",
    "fillText(Hola mundo,39.600,9.600)",
    "restore()",
    "save()",
    "set globalAlpha=0.180",
    "set font=bold 40px Arial",
    "fillText(Hola mundo,37.200,7.200)",
    "restore()",
    "save()",
    "set globalAlpha=0.270",
    "set font=bold 40px Arial",
    "fillText(Hola mundo,34.800,4.800)",
    "restore()",
    "save()",
    "set globalAlpha=0.360",
    "set font=bold 40px Arial",
    "fillText(Hola mundo,32.400,2.400)",
    "restore()",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Hola mundo,30.000,0.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#00ff00",
    "save()",
    "set globalAlpha=0.090",
    "set font=bold 40px Arial",
    "fillText(Segunda línea,9.600,49.600)",
    "restore()",
    "save()",
    "set globalAlpha=0.180",
    "set font=bold 40px Arial",
    "fillText(Segunda línea,7.200,47.200)",
    "restore()",
    "save()",
    "set globalAlpha=0.270",
    "set font=bold 40px Arial",
    "fillText(Segunda línea,4.800,44.800)",
    "restore()",
    "save()",
    "set globalAlpha=0.360",
    "set font=bold 40px Arial",
    "fillText(Segunda línea,2.400,42.400)",
    "restore()",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Segunda línea,0.000,40.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
  ],
  "w": 260,
}
`;

exports[`paridad del dibujo sin efectos nuevos > recto: fondo 1`] = `
{
  "h": 104,
  "log": [
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set textBaseline=top",
    "set textAlign=left",
    "set letterSpacing=1px",
    "save()",
    "set fillStyle=#000000",
    "beginPath()",
    "roundRect(0.000,0.000,284.000,104.000,8.000)",
    "fill()",
    "restore()",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Hola mundo,42.000,12.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillRect(42.000,50.000,200.000,2.667)",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Segunda línea,12.000,52.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillRect(12.000,90.000,260.000,2.667)",
  ],
  "w": 284,
}
`;

exports[`paridad del dibujo sin efectos nuevos > recto: plano 1`] = `
{
  "h": 80,
  "log": [
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "measureText("Hola mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set textBaseline=top",
    "set textAlign=left",
    "set letterSpacing=1px",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Hola mundo,30.000,0.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Segunda línea,0.000,40.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
  ],
  "w": 260,
}
`;

exports[`paridad del dibujo sin efectos nuevos > recto: spans 1`] = `
{
  "h": 80,
  "log": [
    "set letterSpacing=1px",
    "set font=italic bold 40px Arial",
    "measureText("Hola")",
    "set font=bold 40px Arial",
    "measureText(" mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set letterSpacing=1px",
    "set font=italic bold 40px Arial",
    "measureText("Hola")",
    "set font=bold 40px Arial",
    "measureText(" mundo")",
    "set font=bold 40px Arial",
    "measureText("Segunda línea")",
    "set textBaseline=top",
    "set textAlign=left",
    "set letterSpacing=1px",
    "set font=italic bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#00ff00",
    "fillText(Hola,30.000,0.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText( mundo,110.000,0.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set font=bold 40px Arial",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
    "set fillStyle=#112233",
    "fillText(Segunda línea,0.000,40.000)",
    "set shadowColor=transparent",
    "set shadowBlur=0.000",
    "set shadowOffsetX=0.000",
    "set shadowOffsetY=0.000",
  ],
  "w": 260,
}
`;
